plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.hiltAndroid)
}

android {
    namespace = 'com.muxiao.Venus'
    compileSdk = 37

    buildFeatures {
        buildConfig = true
    }

    defaultConfig {
        applicationId = "com.muxiao.Venus"
        minSdk = 23
        targetSdk = 37
        versionCode = 8
        versionName = "0.0.8"

        buildConfigField "int", "VERSION_CODE", "${defaultConfig.versionCode}"
        buildConfigField "String", "VERSION_NAME", "\"${defaultConfig.versionName}\""

        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"

        resConfigs "zh-rCN", "zh-rTW", "en"
    }
    signingConfigs {
        release {
            def storeFileProp = project.findProperty('VENUS_STORE_FILE')
            if (storeFileProp != null) {
                storeFile = file(storeFileProp)
                storePassword = project.findProperty('VENUS_STORE_PASSWORD')
                keyAlias = project.findProperty('VENUS_KEY_ALIAS')
                keyPassword = project.findProperty('VENUS_KEY_PASSWORD')
            }
            enableV1Signing = true
            enableV2Signing = true
            enableV3Signing = true
        }
    }
    buildTypes {
        release {
            minifyEnabled = true
            shrinkResources = true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig = signingConfigs.release
            ndk {
                debugSymbolLevel = 'FULL'
            }
        }
        debug {
            debuggable = true
            jniDebuggable = true
            pseudoLocalesEnabled = true
        }
    }
    // LocaleHelper 支持运行时动态切换语言（简/繁/英），禁用按语言拆分，
    // 确保所有语言资源都打包进基础 APK，避免 Bundle 分发下切换语言后资源缺失。
    bundle {
        language {
            enableSplit = false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    packagingOptions {
        resources {
            excludes += [
                'META-INF/NOTICE.txt',
                'META-INF/LICENSE.txt',
                'META-INF/DEPENDENCIES',
                'META-INF/NOTICE',
                'META-INF/LICENSE',
                'META-INF/services/javax.imageio.spi.ImageInputStreamSpi',
                'META-INF/services/javax.imageio.spi.ImageOutputStreamSpi',
                'META-INF/services/javax.imageio.spi.ImageReaderSpi',
                'META-INF/services/javax.imageio.spi.ImageWriterSpi',
                'META-INF/**/LICENSE*',
                'META-INF/**/NOTICE*',
                'META-INF/*.kotlin_module',
                'META-INF/proguard/*',
                'META-INF/AL2.0',
                'META-INF/LGPL2.1'
            ]
        }
        jniLibs {
            // 与 extractNativeLibs=false 配合：.so 以未压缩/页对齐方式存储，Android 12+ 不再解压到私有存储
            useLegacyPackaging = false
        }
    }

}

// 单 module（仅 :app）项目无需跨 module 依赖聚合任务，关闭以减少不必要的构建步骤。
hilt {
    enableAggregatingTask = false
}

dependencies {
    implementation libs.core.splashscreen
    implementation libs.gzu.liyujiang.android.cn.oaid
    runtimeOnly libs.ads.identifier
    runtimeOnly libs.mcs.ads.identifier
    implementation libs.sensebot
    implementation libs.okhttp
    implementation libs.com.google.zxing.core
    implementation libs.material
    implementation libs.appcompat
    implementation libs.activity
    implementation libs.lifecycle.viewmodel
    implementation libs.lifecycle.livedata
    implementation libs.constraintlayout
    implementation libs.com.google.code.gson.gson3
    implementation libs.ucrop
    implementation libs.glide
    implementation libs.touchimageview
    implementation libs.kotlin.stdlib
    implementation libs.hilt.android
    annotationProcessor libs.hilt.compiler
    implementation libs.datastore.preferences.rxjava3
    implementation libs.rxjava3
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}
